--- a/package.json
+++ b/package.json
@@ -3,5 +3,15 @@
     "express": "^4.18.2",
     "mysql2": "^3.6.0",
     "sequelize": "^6.32.1"
-  }
+  },
+  "name": "sequelizer",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
